updated projects section

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -19,16 +19,16 @@
   {% for project in projects.assignments %}
     <div class="item">
 
-      <span class="project-title">
+      <h4 class="project-title">
         {% if project.link %}
         <a href="{{ project.link }}" target="_blank">{{ project.title }}</a>
         {% else %}
         {{ project.title }}
         {% endif %}
-      </span>
+      </h4>
 
       {% if project.tagline %}
-      - <span class="project-tagline">{{ project.tagline }}</span>
+      <span class="project-tagline">{{ project.tagline }}</span>
       {% endif %}
 
     </div><!--//item-->
